homepage responsive design

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,4 +1,4 @@
-html{line-height:1.15;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%}body{margin:0}article,aside,footer,header,nav,section{display:block}h1{font-size:2em;margin:.67em 0}figcaption,figure,main{display:block}figure{margin:1em 40px}hr{box-sizing:content-box;height:0;overflow:visible}pre{font-family:monospace,monospace;font-size:1em}a{background-color:transparent;-webkit-text-decoration-skip:objects}abbr[title]{border-bottom:none;text-decoration:underline;text-decoration:underline dotted}b,strong{font-weight:inherit}b,strong{font-weight:bolder}code,kbd,samp{font-family:monospace,monospace;font-size:1em}dfn{font-style:italic}mark{background-color:#ff0;color:#000}small{font-size:80%}sub,sup{font-size:75%;line-height:0;position:relative;vertical-align:baseline}sub{bottom:-.25em}sup{top:-.5em}audio,video{display:inline-block}audio:not([controls]){display:none;height:0}img{border-style:none}svg:not(:root){overflow:hidden}button,input,optgroup,select,textarea{font-family:sans-serif;font-size:100%;line-height:1.15;margin:0}button,input{overflow:visible}button,select{text-transform:none}button,html [type=button],[type=reset],[type=submit]{-webkit-appearance:button}input::-moz-focus-inner,legend,button::-moz-focus-inner,[type=button]::-moz-focus-inner,[type=reset]::-moz-focus-inner,[type=submit]::-moz-focus-inner{border-style:none;padding:0}button:-moz-focusring,[type=button]:-moz-focusring,[type=reset]:-moz-focusring,[type=submit]:-moz-focusring{outline:1px dotted ButtonText}fieldset{padding:.35em .75em .625em}legend{box-sizing:border-box;color:inherit;display:table;max-width:100%;padding:0;white-space:normal}progress{display:inline-block;vertical-align:baseline}textarea{overflow:auto;vertical-align:top}[type=checkbox],[type=radio]{box-sizing:border-box;padding:0}[type=number]::-webkit-inner-spin-button,[type=number]::-webkit-outer-spin-button{height:auto}[type=search]{-webkit-appearance:textfield;outline-offset:-2px}[type=search]::-webkit-search-cancel-button,[type=search]::-webkit-search-decoration{-webkit-appearance:none}::-webkit-file-upload-button{-webkit-appearance:button;font:inherit}details,menu{display:block}summary{display:list-item}canvas{display:inline-block}template{display:none}[hidden]{display:none}html{font-size: 62.5%}img{max-width:100%;height:auto;display:block}.wrapper{width:80%;max-width:1280px;margin:0 auto}h1{font-size:2.5rem}*{margin:0;padding:0}*{background-size:cover;background-repeat:no-repeat;background-position:center;background-attachment:fixed}ul,ol,a{text-decoration:none;list-style:none;color:inherit}button{padding:10px;border:none;font:inherit;color:inherit;background-color:transparent}input,select,textarea{border:none;background-image:none;background-color:transparent;-webkit-box-shadow:none;-moz-box-shadow:none;box-shadow:none;resize:none}button,input{line-height:normal}input[type=reset],input[type=submit]{-webkit-appearance:button;cursor:pointer;}button[disabled],input[disabled]{cursor:default;}inp[type=search]{-webkit-appearance:textfield;-moz-box-sizing:content-box;-webkit-box-sizing:content-box;box-sizing:content-box;}input[type=search]::-webkit-search-cancel-button,input[type=search]::-webkit-search-decoration{-webkit-appearance:none;}table{border-collapse:collapse;border-spacing:0;}body,figure{margin:0;}.skip-link{position:absolute;left:-1000px;top:5px;z-index:999;background: white;color:black;}.skip-link:focus{left:0;}
+html{line-height:1.15;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%}body{margin:0}article,aside,footer,header,nav,section{display:block}h1{font-size:2em;margin:.67em 0}figcaption,figure,main{display:block}figure{margin:1em 40px}hr{box-sizing:content-box;height:0;overflow:visible}pre{font-family:monospace,monospace;font-size:1em}a{background-color:transparent;-webkit-text-decoration-skip:objects}abbr[title]{border-bottom:none;text-decoration:underline;text-decoration:underline dotted}b,strong{font-weight:inherit}b,strong{font-weight:bolder}code,kbd,samp{font-family:monospace,monospace;font-size:1em}dfn{font-style:italic}mark{background-color:#ff0;color:#000}small{font-size:80%}sub,sup{font-size:75%;line-height:0;position:relative;vertical-align:baseline}sub{bottom:-.25em}sup{top:-.5em}audio,video{display:inline-block}audio:not([controls]){display:none;height:0}img{border-style:none}svg:not(:root){overflow:hidden}button,input,optgroup,select,textarea{font-family:sans-serif;font-size:100%;line-height:1.15;margin:0}button,input{overflow:visible}button,select{text-transform:none}button,html [type=button],[type=reset],[type=submit]{-webkit-appearance:button}input::-moz-focus-inner,legend,button::-moz-focus-inner,[type=button]::-moz-focus-inner,[type=reset]::-moz-focus-inner,[type=submit]::-moz-focus-inner{border-style:none;padding:0}button:-moz-focusring,[type=button]:-moz-focusring,[type=reset]:-moz-focusring,[type=submit]:-moz-focusring{outline:1px dotted ButtonText}fieldset{padding:.35em .75em .625em}legend{box-sizing:border-box;color:inherit;display:table;max-width:100%;padding:0;white-space:normal}progress{display:inline-block;vertical-align:baseline}textarea{overflow:auto;vertical-align:top}[type=checkbox],[type=radio]{box-sizing:border-box;padding:0}[type=number]::-webkit-inner-spin-button,[type=number]::-webkit-outer-spin-button{height:auto}[type=search]{-webkit-appearance:textfield;outline-offset:-2px}[type=search]::-webkit-search-cancel-button,[type=search]::-webkit-search-decoration{-webkit-appearance:none}::-webkit-file-upload-button{-webkit-appearance:button;font:inherit}details,menu{display:block}summary{display:list-item}canvas{display:inline-block}template{display:none}[hidden]{display:none}html{font-size: 62.5%}img{max-width:100%;height:auto;display:block}.wrapper{width:95%;max-width:1280px;margin:0 auto}h1{font-size:2.5rem}*{margin:0;padding:0}*{background-size:cover;background-repeat:no-repeat;background-position:center;background-attachment:fixed}ul,ol,a{text-decoration:none;list-style:none;color:inherit}button{padding:10px;border:none;font:inherit;color:inherit;background-color:transparent}input,select,textarea{border:none;background-image:none;background-color:transparent;-webkit-box-shadow:none;-moz-box-shadow:none;box-shadow:none;resize:none}button,input{line-height:normal}input[type=reset],input[type=submit]{-webkit-appearance:button;cursor:pointer;}button[disabled],input[disabled]{cursor:default;}inp[type=search]{-webkit-appearance:textfield;-moz-box-sizing:content-box;-webkit-box-sizing:content-box;box-sizing:content-box;}input[type=search]::-webkit-search-cancel-button,input[type=search]::-webkit-search-decoration{-webkit-appearance:none;}table{border-collapse:collapse;border-spacing:0;}body,figure{margin:0;}.skip-link{position:absolute;left:-1000px;top:5px;z-index:999;background: white;color:black;}.skip-link:focus{left:0;}
 .clearfix:after {visibility: hidden; display: block; font-size: 0; content: ''; clear: both; height: 0; }
 
 html { -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box;}
@@ -14,13 +14,23 @@ html { -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: 
     color: #624b5d;
 }
 
+header,
+main,
+footer {
+    z-index: 99;
+}
+
 .home {
     background-image: url("assets/bg-main.jpg");
+    background-position: 0;
+    background-size: 117%;
+    height: 100vh;
 }
 
 .contact,
 .projects {
     background-image: url("assets/bg-colour.jpg");
+    height: 100vh;
 }
 
 /* Header styles */
@@ -31,12 +41,15 @@ header {
 
 .top-line {
     display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 7px 0 7px;
+    justify-content: flex-end;
+    padding: 30px 0 30px;
+    position: relative;
 }
 
 .logo {
+    position: absolute;
+    left: 0;
+    top: 15px;
     width: 50px;
     transition: transform 0.3s ease-in-out;
 }
@@ -46,23 +59,38 @@ header {
     transform: rotate(7deg);
 }
 
-nav ul {
+.menu ul {
     text-align: center;
     display: flex;
     justify-content: space-evenly;
+    font-weight: bold;
 }
 
-nav li {
-    padding-left: 70px;
+.menu li {
+    margin-left: 70px;
     text-transform: uppercase;
     font-size: 18px;
     transition: color 0.6s linear;
 }
 
-nav li:hover,
-nav li:focus {
-    /* color: #fff; */
+.menu li:hover,
+.menu li:focus {
     color: #2c2c2c;
+}
+
+.hamburger,
+.exit-responsive {
+    display: none;
+}
+
+.exit-responsive {
+	position: relative;
+	top: 30px;
+    left: 15px;
+}
+
+.show.menu {
+    display: block;
 }
 
 /* Home main styles */
@@ -73,7 +101,7 @@ nav li:focus {
     flex-direction: column;
     justify-content: center;
     font-weight: normal;
-    padding-left: 20%;
+    padding-left: 25%;
     line-height: 53px;
 }
 
@@ -90,6 +118,7 @@ h1 span {
 }
 
 /* Projects main styles */
+
 .projects-main {
     height: 83vh;
     display: flex;
@@ -191,7 +220,7 @@ footer {
 }
 
 .footer-icons {
-    font-size: 30px;
+    font-size: 27px;
     display: flex;
 }
 
@@ -210,4 +239,195 @@ i {
 i:hover,
 i:focus {
     color: #2c2c2c;
+}
+
+/* Media queries */
+
+/* Desktop */
+
+@media(max-width: 1200px) {
+    .home {
+        background-size: 150%;
+    }
+
+    .home-main {
+        padding-left: 20%;
+    }
+
+    h1,
+    h2 {
+        font-size: 45px;
+    }
+
+    h1 {
+        margin-top: 100px;
+    }
+
+    h1 span {
+        font-size: 90px;
+    }
+}
+
+/* Small desktop */
+
+@media(max-width: 990px) {
+    .wrapper {
+        width: 90%;
+    }
+
+    .home {
+        background-size: 200%;
+        background-image: linear-gradient(to right, rgba(255, 251, 210, 0.35), rgba(180, 167, 90, 0.35)), url(assets/bg-main.jpg);
+    }
+
+    .home-main {
+        padding-left: 0;
+        text-align: center;
+    }
+
+    h1,
+    h2 {
+        font-size: 40px;
+    }
+
+    h1 {
+        margin-top: 40px;
+    }
+
+    h1 span {
+        color: #2c2c2c;
+        font-size: 85px;
+    }
+}
+
+/* Tablet to large mobile */
+
+@media(max-width: 740px) {
+    .home {
+        background-size: 250%;
+    }
+
+    h1,
+    h2 {
+        font-size: 35px;
+    }
+
+    h1 span {
+        font-size: 80px;
+    }
+
+    .home-main {
+        height: 83vh;
+    }
+
+    .footer-icons li {
+        padding-right: 20px;
+    }
+
+    footer p {
+        font-size: 13px;
+    }
+}
+
+@media(max-width: 600px) {
+    .home {
+        background-size: 290%;
+        background-image: linear-gradient(to right, rgba(255, 251, 210, 0.5), rgba(180, 167, 90, 0.5)), url(assets/bg-main.jpg);
+    }
+
+    header {
+        background-color: rgba(255, 255, 255, 0);
+    }
+
+    .hamburger,
+	.exit-responsive {
+		display: block;
+        font-size: 30px;
+        position: absolute;
+        top: 13px;
+        right: -6px;
+	}
+
+	.menu {
+		display: none;
+	}
+
+	.menu .half-screen {
+		position: fixed;
+		top: 0;
+        right: 0;
+        bottom: 0;
+        width: 50%;
+		background:rgba(255, 239, 149, 0.95);
+		color: #624b5d;
+        z-index: 10;
+        display: flex;
+        align-items: center;
+	}
+
+    .menu ul {
+        display: initial;
+		text-align: right;
+        line-height: 130px;
+        width: 80%;
+    }
+
+    .menu ul a {
+		font-size: 23px;
+	}
+
+    h1 {
+        margin-top: 30px;
+    }
+
+    .home-main {
+        height: 85vh;
+    }
+
+    .footer-icons li {
+        font-size: 25px;
+    }
+
+    footer p {
+        display: none;
+    }
+}
+
+/* Mobile */
+
+@media(max-width: 450px) {
+    .home {
+        background-size: 330%;
+        background-position: -50px;
+    }
+
+    .menu ul {
+        text-align: right;
+        width: 90%;
+    }
+
+    .menu ul a {
+        font-size: 18px;
+    }
+    
+    h1 {
+        line-height: 70px;
+    }
+}
+
+/* Small mobile */
+
+@media(max-width: 380px) {
+    .home {
+        background-size: 410%;
+        background-position: -90px;
+    }
+
+    .menu ul a {
+        font-size: 17px;
+    }
+
+    .home-main {
+        height: 86vh;
+    }
 }
