--- a/styles/style.css
+++ b/styles/style.css
@@ -1,4 +1,4 @@
-html{line-height:1.15;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%}body{margin:0}article,aside,footer,header,nav,section{display:block}h1{font-size:2em;margin:.67em 0}figcaption,figure,main{display:block}figure{margin:1em 40px}hr{box-sizing:content-box;height:0;overflow:visible}pre{font-family:monospace,monospace;font-size:1em}a{background-color:transparent;-webkit-text-decoration-skip:objects}abbr[title]{border-bottom:none;text-decoration:underline;text-decoration:underline dotted}b,strong{font-weight:inherit}b,strong{font-weight:bolder}code,kbd,samp{font-family:monospace,monospace;font-size:1em}dfn{font-style:italic}mark{background-color:#ff0;color:#000}small{font-size:80%}sub,sup{font-size:75%;line-height:0;position:relative;vertical-align:baseline}sub{bottom:-.25em}sup{top:-.5em}audio,video{display:inline-block}audio:not([controls]){display:none;height:0}img{border-style:none}svg:not(:root){overflow:hidden}button,input,optgroup,select,textarea{font-family:sans-serif;font-size:100%;line-height:1.15;margin:0}button,input{overflow:visible}button,select{text-transform:none}button,html [type=button],[type=reset],[type=submit]{-webkit-appearance:button}input::-moz-focus-inner,legend,button::-moz-focus-inner,[type=button]::-moz-focus-inner,[type=reset]::-moz-focus-inner,[type=submit]::-moz-focus-inner{border-style:none;padding:0}button:-moz-focusring,[type=button]:-moz-focusring,[type=reset]:-moz-focusring,[type=submit]:-moz-focusring{outline:1px dotted ButtonText}fieldset{padding:.35em .75em .625em}legend{box-sizing:border-box;color:inherit;display:table;max-width:100%;padding:0;white-space:normal}progress{display:inline-block;vertical-align:baseline}textarea{overflow:auto;vertical-align:top}[type=checkbox],[type=radio]{box-sizing:border-box;padding:0}[type=number]::-webkit-inner-spin-button,[type=number]::-webkit-outer-spin-button{height:auto}[type=search]{-webkit-appearance:textfield;outline-offset:-2px}[type=search]::-webkit-search-cancel-button,[type=search]::-webkit-search-decoration{-webkit-appearance:none}::-webkit-file-upload-button{-webkit-appearance:button;font:inherit}details,menu{display:block}summary{display:list-item}canvas{display:inline-block}template{display:none}[hidden]{display:none}html{font-size: 62.5%}img{max-width:100%;height:auto;display:block}.wrapper{width:95%;max-width:1280px;margin:0 auto}h1{font-size:2.5rem}*{margin:0;padding:0}*{background-size:cover;background-repeat:no-repeat;background-position:center;background-attachment:fixed}ul,ol,a{text-decoration:none;list-style:none;color:inherit}button{padding:10px;border:none;font:inherit;color:inherit;background-color:transparent}input,select,textarea{border:none;background-image:none;background-color:transparent;-webkit-box-shadow:none;-moz-box-shadow:none;box-shadow:none;resize:none}button,input{line-height:normal}input[type=reset],input[type=submit]{-webkit-appearance:button;cursor:pointer;}button[disabled],input[disabled]{cursor:default;}inp[type=search]{-webkit-appearance:textfield;-moz-box-sizing:content-box;-webkit-box-sizing:content-box;box-sizing:content-box;}input[type=search]::-webkit-search-cancel-button,input[type=search]::-webkit-search-decoration{-webkit-appearance:none;}table{border-collapse:collapse;border-spacing:0;}body,figure{margin:0;}.skip-link{position:absolute;left:-1000px;top:5px;z-index:999;background: white;color:black;}.skip-link:focus{left:0;}
+html{line-height:1.15;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%}body{margin:0}article,aside,footer,header,nav,section{display:block}h1{font-size:2em;margin:.67em 0}figcaption,figure,main{display:block}figure{margin:1em 40px}hr{box-sizing:content-box;height:0;overflow:visible}pre{font-family:monospace,monospace;font-size:1em}a{background-color:transparent;-webkit-text-decoration-skip:objects}abbr[title]{border-bottom:none;text-decoration:underline;text-decoration:underline dotted}b,strong{font-weight:inherit}b,strong{font-weight:bolder}code,kbd,samp{font-family:monospace,monospace;font-size:1em}dfn{font-style:italic}mark{background-color:#ff0;color:#000}small{font-size:80%}sub,sup{font-size:75%;line-height:0;position:relative;vertical-align:baseline}sub{bottom:-.25em}sup{top:-.5em}audio,video{display:inline-block}audio:not([controls]){display:none;height:0}img{border-style:none}svg:not(:root){overflow:hidden}button,input,optgroup,select,textarea{font-family:sans-serif;font-size:100%;line-height:1.15;margin:0}button,input{overflow:visible}button,select{text-transform:none}button,html [type=button],[type=reset],[type=submit]{-webkit-appearance:button}input::-moz-focus-inner,legend,button::-moz-focus-inner,[type=button]::-moz-focus-inner,[type=reset]::-moz-focus-inner,[type=submit]::-moz-focus-inner{border-style:none;padding:0}button:-moz-focusring,[type=button]:-moz-focusring,[type=reset]:-moz-focusring,[type=submit]:-moz-focusring{outline:1px dotted ButtonText}fieldset{padding:.35em .75em .625em}legend{box-sizing:border-box;color:inherit;display:table;max-width:100%;padding:0;white-space:normal}progress{display:inline-block;vertical-align:baseline}textarea{overflow:auto;vertical-align:top}[type=checkbox],[type=radio]{box-sizing:border-box;padding:0}[type=number]::-webkit-inner-spin-button,[type=number]::-webkit-outer-spin-button{height:auto}[type=search]{-webkit-appearance:textfield;outline-offset:-2px}[type=search]::-webkit-search-cancel-button,[type=search]::-webkit-search-decoration{-webkit-appearance:none}::-webkit-file-upload-button{-webkit-appearance:button;font:inherit}details,menu{display:block}summary{display:list-item}canvas{display:inline-block}template{display:none}[hidden]{display:none}html{font-size: 62.5%}img{max-width:100%;height:auto;display:block}.wrapper{width:90%;max-width:1480px;margin:0 auto}h1{font-size:2.5rem}*{margin:0;padding:0}*{background-size:cover;background-repeat:no-repeat;background-position:center;background-attachment:fixed}ul,ol,a{text-decoration:none;list-style:none;color:inherit}button{padding:10px;border:none;font:inherit;color:inherit;background-color:transparent}input,select,textarea{border:none;background-image:none;background-color:transparent;-webkit-box-shadow:none;-moz-box-shadow:none;box-shadow:none;resize:none}button,input{line-height:normal}input[type=reset],input[type=submit]{-webkit-appearance:button;cursor:pointer;}button[disabled],input[disabled]{cursor:default;}inp[type=search]{-webkit-appearance:textfield;-moz-box-sizing:content-box;-webkit-box-sizing:content-box;box-sizing:content-box;}input[type=search]::-webkit-search-cancel-button,input[type=search]::-webkit-search-decoration{-webkit-appearance:none;}table{border-collapse:collapse;border-spacing:0;}body,figure{margin:0;}.skip-link{position:absolute;left:-1000px;top:5px;z-index:999;background: white;color:black;}.skip-link:focus{left:0;}
 .clearfix:after {visibility: hidden; display: block; font-size: 0; content: ''; clear: both; height: 0; }
 
 html { -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box;}
@@ -9,32 +9,47 @@ html { -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: 
 .sr-only { position: absolute; width: 1px; height: 1px; margin: -1px; border: 0; padding: 0; white-space: nowrap; clip-path: inset(100%); clip: rect(0 0 0 0); overflow: hidden;}
 
 /* General styles */
-* {
-    font-family: 'Comfortaa', cursive;
+body {
+    font-family: 'Comfortaa', sans-serif;
     color: #624b5d;
-}
-
-header,
-main,
-footer {
-    z-index: 99;
-}
-
-.home {
-    background-image: url("assets/bg-main.jpg");
-    background-position: 0;
-    background-size: 117%;
-    height: 100vh;
-}
-
-.contact,
-.projects {
+    color-adjust: exact;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
     background-image: url("assets/bg-colour.jpg");
     height: 100vh;
 }
 
-/* Header styles */
+.photo {
+    height: 100%;
+    width: auto;
+    position: absolute;
+    top: 0;
+    left: 7%;
+    z-index: -1;
+}
 
+/* Particles JS background styles */
+#particles-js canvas {
+    display: block;
+    -webkit-transform: scale(1);
+    -ms-transform: scale(1);
+    transform: scale(1);
+    opacity: 1;
+    -webkit-transition: opacity .8s ease, -webkit-transform 1.4s ease;
+    transition: opacity .8s ease, transform 1.4s ease
+}
+
+#particles-js {
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    z-index: -100;
+    top: 0;
+    left: 0
+}
+
+/* Header styles */
 header {
     background-color: rgba(255, 255, 255, 0.15);
 }
@@ -63,6 +78,7 @@ header {
     text-align: center;
     display: flex;
     justify-content: space-evenly;
+    align-items: center;
     font-weight: bold;
 }
 
@@ -70,12 +86,16 @@ header {
     margin-left: 70px;
     text-transform: uppercase;
     font-size: 18px;
-    transition: color 0.6s linear;
+    width: 97px;
+    height: 20px;
+    text-align: center;
+    transition: all 0.4s linear;
 }
 
 .menu li:hover,
 .menu li:focus {
-    color: #2c2c2c;
+    color: #f6f7f9;
+    letter-spacing: 1px;
 }
 
 .hamburger,
@@ -96,50 +116,42 @@ header {
 /* Home main styles */
 
 .home-main {
-    height: 82vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
     font-weight: normal;
-    padding-left: 25%;
+    padding-left: 26%;
     line-height: 53px;
 }
 
 h1,
 h2 {
-    font-size: 55px;
+    font-size: 50px;
     color: #624b5d;
 }
 
 h1 span {
     font-family: 'Kaushan Script', cursive;
     font-size: 100px;
-    color: #fff;
+    color: #f6f7f9;
 }
 
 /* Projects main styles */
-
 .projects-main {
-    height: 83vh;
     display: flex;
     align-items: center;
     justify-content: center;
 }
 
 /* Contact main styles */
-
-.contact-main {
-    height: 82vh;
-}
-
-.main-icon-container{
+.main-icon-container {
     display: flex;
     justify-content: space-between;
-    margin: 0 auto;
+    align-items: space-evenly;
+    margin: 0 auto 4%;
     width: 80%;
     text-transform: uppercase;
     text-align: center;
-    padding: 5% 0;
     line-height: 50px;
 }
 
@@ -161,13 +173,22 @@ h1 span {
 .contact-icons li {
     margin: 0 40px 0;
     font-size: 40px;
+    width: 30px;
+    height: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.contact-icons i:hover,
+.contact-icons i:focus {
+    font-size: 45px;
 }
 
 /* Form styles */
-
 .contact-form {
     margin: 0 auto;
-    width: 70%;
+    width: 80%;
     font-size: 15px;
     display: flex;
     flex-direction: column;
@@ -176,7 +197,14 @@ h1 span {
 
 form input,
 textarea {
-    background-color: #fff;  
+    background-color: #f6f7f9;
+    color: #624b5d;
+}
+
+input,
+textarea,
+button {
+    border-radius: 7px;
 }
 
 .name-email {
@@ -188,11 +216,16 @@ textarea {
 input[type=text],
 input[type=email] {
     padding: 20px;
-    width: 50%;
+}
+
+input[type=text] {
+    margin-right: 5px;
+    width: calc(40% - 2.5px);
 }
 
 input[type=email] {
-    margin-left: 10px;
+    margin-left: 5px;
+    width: calc(60% - 2.5px);
 }
 
 textarea {
@@ -205,10 +238,20 @@ textarea {
 button[type=submit] {
     width: 20%;
     padding: 15px;
-    background-color: #fff;
+    background-color: #f6f7f9;
     text-transform: uppercase;
     font-size: 14px;
     font-weight: bold;
+}
+
+button[type=submit] {
+    transition: all 0.9s linear;
+}
+
+button[type=submit]:hover,
+button[type=submit]:focus {
+    color: #f6f7f9;
+    background-color: #624b5d;
 }
 
 /* Footer styles */
@@ -216,47 +259,50 @@ button[type=submit] {
 footer {
     display: flex;
     justify-content: space-between;
-    align-items: flex-end;
+    align-items: center;
+    padding-bottom: 20px;
 }
 
 .footer-icons {
-    font-size: 27px;
+    font-size: 29px;
     display: flex;
 }
 
 .footer-icons li {
-    padding-right: 30px;
-}
-    
-footer p {
-    font-size: 15px;
+    margin-right: 30px;
+    width: 35px;
+    height: 35px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 i {
-    transition: color 0.5s linear;
+    transition: all 0.3s linear;
 }
 
 i:hover,
 i:focus {
-    color: #2c2c2c;
+    color: #f6f7f9;
+    font-size: 35px;
+}
+
+.home i:hover,
+.home i:focus {
+    color: #e0bf5e;
+}
+
+footer p {
+    font-size: 14px;
 }
 
 /* Media queries */
 
 /* Desktop */
-
 @media(max-width: 1200px) {
-    .home {
-        background-size: 150%;
-    }
-
-    .home-main {
-        padding-left: 20%;
-    }
-
     h1,
     h2 {
-        font-size: 45px;
+        font-size: 40px;
     }
 
     h1 {
@@ -264,7 +310,7 @@ i:focus {
     }
 
     h1 span {
-        font-size: 90px;
+        font-size: 87px;
     }
 }
 
@@ -276,18 +322,22 @@ i:focus {
     }
 
     .home {
-        background-size: 200%;
-        background-image: linear-gradient(to right, rgba(255, 251, 210, 0.35), rgba(180, 167, 90, 0.35)), url(assets/bg-main.jpg);
+        background-image: linear-gradient(to right, rgba(255, 251, 210, 0.35), rgba(180, 167, 90, 0.35)), url("assets/bg-colour.jpg");
+    }
+
+    .photo {
+        height: 100%;
+        width: auto;
+        position: absolute;
+        top: 0;
+        left: 10%;
+        z-index: -1;
+        opacity: 0.5;
     }
 
     .home-main {
         padding-left: 0;
         text-align: center;
-    }
-
-    h1,
-    h2 {
-        font-size: 40px;
     }
 
     h1 {
@@ -298,30 +348,53 @@ i:focus {
         color: #2c2c2c;
         font-size: 85px;
     }
+
+    .main-icon-container h1 {
+        font-size: 22px;
+    }
+
+    .contact-icons li {
+        margin: 0 30px 0;
+        font-size: 33px;
+    }
+    
+    .contact-icons i:hover,
+    .contact-icons i:focus {
+        font-size: 35px;
+    }
 }
 
 /* Tablet to large mobile */
 
 @media(max-width: 740px) {
-    .home {
-        background-size: 250%;
-    }
-
     h1,
     h2 {
         font-size: 35px;
+        line-height: 40px;
     }
 
     h1 span {
         font-size: 80px;
     }
 
-    .home-main {
-        height: 83vh;
+    .contact-icons li {
+        margin: 0 17px 0;
+        font-size: 30px;
+    }
+    
+    .contact-icons i:hover,
+    .contact-icons i:focus {
+        font-size: 35px;
+    }
+
+    input[type=text],
+    input[type=email],
+    textarea {
+        padding: 14px;
     }
 
     .footer-icons li {
-        padding-right: 20px;
+        margin-right: 20px;
     }
 
     footer p {
@@ -330,11 +403,6 @@ i:focus {
 }
 
 @media(max-width: 600px) {
-    .home {
-        background-size: 290%;
-        background-image: linear-gradient(to right, rgba(255, 251, 210, 0.5), rgba(180, 167, 90, 0.5)), url(assets/bg-main.jpg);
-    }
-
     header {
         background-color: rgba(255, 255, 255, 0);
     }
@@ -358,30 +426,84 @@ i:focus {
         right: 0;
         bottom: 0;
         width: 50%;
-		background:rgba(255, 239, 149, 0.95);
+        background: #e4c874f6;
 		color: #624b5d;
         z-index: 10;
-        display: flex;
-        align-items: center;
 	}
 
-    .menu ul {
-        display: initial;
-		text-align: right;
-        line-height: 130px;
-        width: 80%;
+    .half-screen ul {
+        height: 100vh;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+        align-items: center;
+        padding-top: 40%;
+    }
+
+    .half-screen li {
+        width: 100%;
+        margin: 0 auto;
+        text-align: center;
     }
 
     .menu ul a {
-		font-size: 23px;
-	}
+        font-size: 23px;
+    }
+    
+    .hamburger i,
+    .half-screen i {
+        transition: color 0.3s linear;
+    }
+
+    .hamburger i:hover,
+    .hamburger i:focus,
+    .half-screen i:hover,
+    .half-screen i:focus {
+        color: #f6f7f9;
+        font-size: 30px;
+    }
 
     h1 {
         margin-top: 30px;
     }
 
-    .home-main {
-        height: 85vh;
+    .contact-main {
+        width: 95%;
+    }
+
+    .main-icon-container {
+        width: 100%;
+        padding-bottom: 25px;
+    }
+
+    .contact-form {
+        width: 90%;
+    }
+
+    input[type=text],
+    input[type=email],
+    textarea {
+        padding: 12px;
+    }
+
+    input[type=text] {
+        margin-right: 3px;
+        width: calc(40% - 1.5px);
+    }
+    
+    input[type=email] {
+        margin-left: 3px;
+        width: calc(60% - 1.5px);
+    }
+
+    textarea {
+        margin: 6px;
+    }
+    
+    button[type=submit] {
+        width: 30%;
+        padding: 12px;
+        font-weight: bold;
     }
 
     .footer-icons li {
@@ -396,38 +518,83 @@ i:focus {
 /* Mobile */
 
 @media(max-width: 450px) {
-    .home {
-        background-size: 330%;
-        background-position: -50px;
-    }
-
-    .menu ul {
-        text-align: right;
-        width: 90%;
-    }
-
     .menu ul a {
         font-size: 18px;
     }
     
+    h1,
+    h2 {
+        font-size: 30px;
+    }
+    
     h1 {
-        line-height: 70px;
+        line-height: 60px;
+    }
+
+    h1 span {
+        font-size: 75px;
+    }
+
+    h2 {
+        line-height: 35px;
+    }
+
+    .main-icon-container h1 {
+        font-size: 20px;
+        margin-bottom: 0;
+    }
+
+    .contact-icons li {
+        margin: 0 10px 0;
+        font-size: 29px;
+    }
+    
+    .contact-icons i:hover,
+    .contact-icons i:focus {
+        font-size: 32px;
+    }
+
+    .contact-form {
+        width: 97%;
     }
 }
 
 /* Small mobile */
 
 @media(max-width: 380px) {
-    .home {
-        background-size: 410%;
-        background-position: -90px;
-    }
-
     .menu ul a {
-        font-size: 17px;
+        font-size: 15px;
     }
 
-    .home-main {
-        height: 86vh;
+    h1,
+    h2 {
+        font-size: 28px;
+    }
+
+    h1 span {
+        font-size: 70px;
+    }
+
+    .main-icon-container h1 {
+        font-size: 19px;
+    }
+
+    .contact-form {
+        width: 100%;
+    }
+
+    
+    input[type=text] {
+        margin-right: 2px;
+        width: calc(40% - 1px);
+    }
+    
+    input[type=email] {
+        margin-left: 2px;
+        width: calc(60% - 1px);
+    }
+
+    textarea {
+        margin: 4px 0;
     }
 }
