--- a/styles/style.css
+++ b/styles/style.css
@@ -98,21 +98,6 @@ header {
     letter-spacing: 1px;
 }
 
-.hamburger,
-.exit-responsive {
-    display: none;
-}
-
-.exit-responsive {
-	position: relative;
-	top: 30px;
-    left: 15px;
-}
-
-.show.menu {
-    display: block;
-}
-
 /* Home main styles */
 .home-main {
     display: flex;
@@ -256,64 +241,17 @@ footer p {
         background-color: rgba(255, 255, 255, 0);
     }
 
-    .hamburger,
-	.exit-responsive {
-		display: block;
-        font-size: 30px;
-        position: absolute;
-        top: 13px;
-        right: -6px;
-	}
-
-	.menu {
-		display: none;
-	}
-
-	.menu .half-screen {
-		position: fixed;
-		top: 0;
-        right: 0;
-        bottom: 0;
-        width: 50%;
-        background: #e4c874f6;
-		color: #624b5d;
-        z-index: 10;
-	}
-
-    .half-screen ul {
-        height: 100vh;
-        display: flex;
-        flex-direction: column;
-        justify-content: space-around;
-        align-items: center;
-        padding-top: 40%;
-    }
-
-    .half-screen li {
-        width: 100%;
-        margin: 0 auto;
-        text-align: center;
-    }
-
     .menu ul a {
         font-size: 23px;
-    }
-    
-    .hamburger i,
-    .half-screen i {
-        transition: color 0.3s linear;
-    }
-
-    .hamburger i:hover,
-    .hamburger i:focus,
-    .half-screen i:hover,
-    .half-screen i:focus {
-        color: #f6f7f9;
-        font-size: 30px;
     }
 
     h1 {
         margin-top: 30px;
+    }
+
+    .footer-icons {
+        width: 100%;
+        margin: 0 auto;
     }
 
     .footer-icons li {
@@ -363,5 +301,29 @@ footer p {
 
     h1 span {
         font-size: 70px;
+    }
+}
+
+/* Mobile landscape */
+@media(max-height: 380px) {
+    .menu ul a {
+        font-size: 15px;
+    }
+        
+    h1,
+    h2 {
+        font-size: 25px;
+    }
+
+    h1 span {
+        font-size: 60px;
+    }
+
+    .footer-icons {
+        display: none;
+    }
+
+    footer p {
+        display: none;
     }
 }
