--- a/styles/style.css
+++ b/styles/style.css
@@ -16,7 +16,7 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    background-image: url("assets/bg-colour.jpg");
+    background: linear-gradient(to right, #f5ec87, #deba59);
     height: 100vh;
 }
 
@@ -186,17 +186,8 @@ footer p {
         width: 90%;
     }
 
-    .home {
-        background-image: linear-gradient(to right, rgba(255, 251, 210, 0.3), rgba(180, 167, 90, 0.3)), url("assets/bg-colour.jpg");
-    }
-
     .photo {
-        height: 100%;
-        width: auto;
-        position: absolute;
-        top: 0;
-        left: 10%;
-        z-index: -1;
+        left: 5%;
         opacity: 0.2;
     }
 
@@ -269,6 +260,10 @@ footer p {
 /* Mobile */
 
 @media(max-width: 450px) {
+    .photo {
+        left: 15%;
+    }
+
     .menu ul a {
         font-size: 18px;
     }
@@ -309,6 +304,10 @@ footer p {
 
 /* Mobile landscape */
 @media(max-height: 380px) {
+    .photo {
+        left: 14%;
+    }
+    
     .menu ul a {
         font-size: 15px;
     }
